data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3329.wast
;; 8. **Test Description**:     - **Setup**: Create a recursive function `recurse` that escalates stack depth and eventually hits an `unreachable`.    - **Constraint**: Evaluate recursion depth management and triggers.    - **Reasoning**: Verifies stack overflow or depth leading to unreachable code.

(assert_invalid
  (module
    (func $recurse (param i32)
      (local $local i32)
      (local.set $local (i32.add (local.get $local) (i32.const 1)))
      (call $recurse (local.get $local))
      (unreachable)
    )
    (start $recurse)
  )
  "stack overflow or depth management leading to unreachable"
)